# symbion-structural-gateway

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test.py
src/: __init__.py:
src/api/: gateway.py
src/core/: config.py
src/modules/: ocr_engine.py  prompt_enhancer.py
